# implantacao_medicit_v2

./: Menu.py  database.py  etapas_checklist.csv  pyproject.toml  requirements.txt  utils.py
.Streamlit/: secrets.toml
pages/: 10_🧩Cadastro_Etapas.py  11_💾Historico.py  1_🧑‍⚕️Cadastro_Cliente.py  1_🧑‍⚕️Cadastro_Clientes.py  2_✅Fases_Implantacao.py  2_🧩Etapa_por_Cliente.py  3_✅Gestao_Implantacao.py  3_✅Gestão_Etapas_Implantação.py  3_📓Etapa_por_Cliente.py  3_🖨️Protocolo.py  4_📓Cadastro_Etapas.py  4_📓Gestao_Etapas.py  5_❔Ajuda.py  5_🖨️Protocolo.py  6_🔍Consulta_Geral.py  99_⛑️Ajuda.py
