[project]
name = "implantacao"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabiano Volkweis",email = "fabiano.volkweis@bol.com.br"}
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "datetime (>=6.0,<7.0)",
    "fpdf (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "implantacao", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
