[project]
name = "implantacao"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabiano"}
]
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-auth (>=2.49.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fpdf2 (>=2.8.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
